@@ -149,7 +149,10 @@ To disable a test, pass its name with a leading minus (C<->):
 
   use Test::Kwalitee tests => [ qw( -use_strict has_readme ));
 
-As of Test::Kwalitee 1.09 and L<Module::CPANTS::Analyse> 0.87, the tests include:
+The list of each available metric currently available on your
+system can be obtained with the C<kwalitee-metrics> command (with
+descriptions, if you pass C<--verbose> or C<-v>, but
+as of Test::Kwalitee 1.09 and L<Module::CPANTS::Analyse> 0.87, the tests include:
 
 =begin :list
 
@@ -242,6 +245,7 @@ With thanks to CPANTS and Thomas Klausner, as well as test tester Chris Dolan.
 
 =begin :list
 
+* L<kwalitee-metrics>
 * L<Module::CPANTS::Analyse>
 * L<Test::Kwalitee::Extra>
 * L<Dist::Zilla::Plugin::Test::Kwalitee>
